--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -9,12 +9,38 @@
   }
 }
 @media (max-width: 600px) {
- .scales {
+  .scales {
     grid-template-columns: 1fr;
+  }
+  .modal-content {
+    font-size: 1.5em;
+  }
+  .input > button > svg {
+    height: 1.75em;
+    width: 1.75em;
+  }
+}
+@media (max-width: 350px) {
+  .modal-content {
+    font-size: 1.25em;
+  }
+  .input > button > svg {
+    height: 1.4em;
+    width: 1.4em;
   }
 }
 @media (min-width: 2000px) {
   .scales {
     grid-template-columns: repeat(6, 1fr);
+  }
+}
+@media (max-height: 800px) {
+  .modal-content {
+    margin-top: 4em;
+  }
+}
+@media (max-height: 650px) {
+  .modal-content {
+    margin-top: 2em;
   }
 }
